// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-14r2v89-0 dVzFhI"
  disabled={true}
  onClick={null}
  type="submit"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`PrimaryButton Should Render 1`] = `
<button
  className="primary__Button-sc-14r2v89-0 dVzFhI"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span>
    Login
  </span>
</button>
`;
